# Lemmatizator-stremmer

./: .gitignore  CMakeLists.txt  README.md  configure.sh  echotest.sh  main.cpp  stest.txt  updatecompilers.sh
.github/workflow/: work.yml
.github/workflows/: work.yml
include/: Lemmatizator.h
src/: FileReader.cpp  FileReaderImpl.cpp  Lemmatizator.cpp
test/: CMakeLists.txt  test_Lemmatizator.cpp
